test/spec/simd/simd_address.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_address.wast
;;; ARGS*: --enable-simd
(;; STDOUT ;;;
out/test/spec/simd/simd_address.wast:86: assert_trap passed: out of bounds memory access: access at 65521+16 >= max value 65536
out/test/spec/simd/simd_address.wast:104: assert_trap passed: out of bounds memory access: access at 65521+16 >= max value 65536
out/test/spec/simd/simd_address.wast:107: assert_malformed passed:
  out/test/spec/simd/simd_address/simd_address.2.wat:1:35: error: unexpected token offset=-1, expected ).
  (memory 1)(func  (drop (v128.load offset=-1 (i32.const 0))))
                                    ^^^^^^^^^
  out/test/spec/simd/simd_address/simd_address.2.wat:1:60: error: unexpected token ), expected EOF.
  (memory 1)(func  (drop (v128.load offset=-1 (i32.const 0))))
                                                             ^
out/test/spec/simd/simd_address.wast:122: assert_trap passed: out of bounds memory access: access at 65521+16 >= max value 65536
out/test/spec/simd/simd_address.wast:125: assert_malformed passed:
  out/test/spec/simd/simd_address/simd_address.4.wat:1:30: error: unexpected token offset=-1, expected ).
  (memory 1)(func  (v128.store offset=-1 (i32.const 0) (v128.const i32x4 0 0 0 ...
                               ^^^^^^^^^
  out/test/spec/simd/simd_address/simd_address.4.wat:1:81: error: unexpected token ), expected EOF.
  ...ory 1)(func  (v128.store offset=-1 (i32.const 0) (v128.const i32x4 0 0 0 0)))
                                                                                 ^
out/test/spec/simd/simd_address.wast:138: assert_malformed passed:
  out/test/spec/simd/simd_address/simd_address.5.wat:1:34: error: offset must be less than or equal to 0xffffffff
  (memory 1)(func (drop (v128.load offset=4294967296 (i32.const 0))))
                                   ^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_address.wast:146: assert_malformed passed:
  out/test/spec/simd/simd_address/simd_address.6.wat:1:29: error: offset must be less than or equal to 0xffffffff
  (memory 1)(func (v128.store offset=4294967296 (i32.const 0) (v128.const i32x4...
                              ^^^^^^^^^^^^^^^^^
43/43 tests passed.
;;; STDOUT ;;)
